--- a/exercises/assets/css/styles.css
+++ b/exercises/assets/css/styles.css
@@ -1,232 +1,303 @@
-html
+*
 {
-    color : black;
+    margin: 0;
+    padding : 0;
+    box-sizing: border-box;
 }
 
-section *
+html, body
 {
-    font-family: DialogInput, serif;
-    background-color: white;
-    margin: auto;
-    width: 40%;
-
-
-
+    display: grid;
+    height: 100%;
 
 }
 
+body{
+    margin: 3px;
+    background-color: black;
+}
+/* --  Nav  -- */
+.nav-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
 
-p
-{
-    box-shadow: 100px 10px 100px;
-    margin: auto;
-    padding-bottom: 3em;
-    width: 50%;
+}
+
+.item-bar{
+    float: right;
+}
+
+.item-bar .text-bar {
+    display: block;
+    color: white;
     text-align: center;
-    font-size: 110%;
-    animation-duration: 3s;
-    animation-name: slidein;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-@-webkit-keyframes {
-}
-@-webkit-keyframes extend {
-    0% {
-        width: 600px;
-        height: 200px;
-        border-radius: 100px;
-    } 10% {
-          width: 610px;
-          height: 210px;
-          background: #fff;
-          margin-left: - 5px;
-          margin-top: - 5px;
-      } 20% {
-            width: 600px;
-            height: 200px;
-            background: #6fb07f;
-            margin-left: 0px;
-            margin-top: 0px;
-        } 100% {
-              width: 200px;
-              height: 200px;
-              border-radius: 100px;
-              margin-left: 190px;
-              background: #6fb07f;
-          }
-}
-@keyframes extend {
-    0% {
-        width: 600px;
-        height: 200px;
-        border-radius: 100px;
-    } 10% {
-          width: 610px;
-          height: 210px;
-          background: #fff;
-          margin-left: - 5px;
-          margin-top: - 5px;
-      } 20% {
-            width: 600px;
-            height: 200px;
-            background: #6fb07f;
-            margin-left: 0px;
-            margin-top: 0px;
-        } 100% {
-              width: 200px;
-              height: 200px;
-              border-radius: 100px;
-              margin-left: 190px;
-              background: #6fb07f;
-          }
-}
-@-webkit-keyframes {
-}
-@-webkit-keyframes disappear {
-    0% {
-        opacity: 1;
-    } 20% {
-          color: #fff;
-      } 100% {
-            opacity: 0;
-        }
-}
-@keyframes disappear {
-    0% {
-        opacity: 1;
-    } 20% {
-          color: #fff;
-      } 100% {
-            opacity: 0;
-        }
-}
-@-webkit-keyframes {
-}
-@-webkit-keyframes appear {
-    0% {
-        opacity: 0;
-    } 70% {
-          opacity: 0;
-      } 100% {
-            opacity: 1;
-        }
-}
-@keyframes appear {
-    0% {
-        opacity: 0;
-    } 70% {
-          opacity: 0;
-      } 100% {
-            opacity: 1;
-        }
-}
-html {
-    background: #fff
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-input, button, submit {
-    border: none
+.nav-bar .text-bar:hover {
+    background-color: rgb(33, 33, 35);
 }
 
-.cont {
-    position: absolute;
-    width: 610px;
-    height: 10px;
-    left: 50%;
-    top: 50%;
-    margin: -100px 0 0 -300px
-}
-
-button {
-    border-width: 1px;
-    width: 600px;
-    height: 200px;
-    /*border-radius*/
-    border-radius: 100px;
-    background: #fff;
-    position: absolute;
-    border: 5px solid #6fb07f
-}
-
-button > span {
-    font-size: 48px;
-    color: #6fb07f
-}
-
-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
-    opacity: 0
-}
-
-button:focus {
-    /*animation*/
-    -webkit-animation: extend 1s ease-in-out;
-    -ms-animation: extend 1s ease-in-out;
-    animation: extend 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
-}
-
-button:focus > span {
-    /*animation*/
-    -webkit-animation: disappear 1s ease-in-out;
-    -ms-animation: disappear 1s ease-in-out;
-    animation: disappear 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
-}
-
-button:focus > img {
-    /*animation*/
-    -webkit-animation: appear 1s ease-in-out;
-    -ms-animation: appear 1s ease-in-out;
-    animation: appear 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
-}
-.sexe1
+.main
 {
+    text-align: center;
+    font-size: 40px;
     color: red;
-    padding-bottom: 20px;
+    display: block;
+    background-color: black;
 }
-.sexe2
+.Title
 {
-    color : orange;
-    padding-bottom: 20px;
+    margin: 2px;
 }
-.sexe3
+
+/* ---------------------- BUTTON ----------------------- */
+.center
 {
-    color : yellow;
-    padding-bottom: 20px;
+    display: flex;
+    place-items: center;
+    justify-content: center;
+    text-align: center;
+
 }
-.sexe4
+.outer
 {
-    color : greenyellow ;
-    padding-bottom: 20px;
+    position: relative;
+    margin: 0 50px;
+    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
 }
-.sexe5
+
+.button
 {
-    color : green;
-    padding-bottom: 20px;
+    height: 70px;
+    width: 220px;
+    border-radius: 50px;
 }
-.sexe6
+.circle
 {
-    color : blue;
-    padding-bottom: 20px;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
 }
-.sexe7
+.outer button, .outer span
 {
-    color: violet;
-    padding-bottom: 20px;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.outer button
+{
+    background: #111;
+    color: #f2f2f2;
+    outline: none;
+    border: none;
+    z-index: 9;
+    font-size: 20px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    cursor: pointer;
+
+}
+.button button
+{
+    height: 60px;
+    width: 210px;
+    border-radius: 50px;
+}
+.circle button
+{
+    height: 180px;
+    width: 180px;
+    border-radius: 50%;
+}
+.outer span
+{
+    height: 100%;
+    width: 100%;
+    background: inherit;
+}
+.button span
+{
+    border-radius: 50px;
+}
+.circle span
+{
+    border-radius: 50%;
+}
+.outer:hover span:nth-child(1)
+{
+    filter: blur(7px);
+}
+
+.outer:hover span:nth-child(1)
+{
+    filter: blur(14px);
+}
+.outer:hover
+{
+animation: rotate 1.5s linear infinite;
+}
+@keyframes rotate {
+    0%
+    {
+        filter: hue-rotate(0deg);
+    }
+    100%
+    {
+        filter: hue-rotate(360deg) ;
+    }
+}
+
+/* ----------------------- LOGO ----------------------- */
+
+
+.logo
+{
+    position: relative;
+    width: 400px;
+    height: 400px;
+    background: rgba(0,0,0,0.5);
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+
+}
+.logo::before
+{
+    content:'';
+    position: absolute;
+    inset : -10px 140px;
+    background: linear-gradient(315deg, #ff0000, #f3f3f3);
+    transition : 0.5s;
+    animation: animate 4s linear infinite;
+}
+.logo:hover::before
+{
+    inset:-20px 0px;
+}
+@keyframes animate {
+    0%
+    {
+        transform: rotate(0deg);
+    }
+    100%
+    {
+        transform : rotate(360deg);
+    }
+}
+
+
+.logo::after
+{
+    content:'';
+    position:absolute;
+    inset: 6px;
+    background: #042f59;
+    border-radius: 50%;
+    z-index: 1;
+}
+.content
+{
+    position: absolute;
+    inset: 30px;
+    border : 6px solid #e3e3e3;
+    z-index: 3;
+    border-radius: 50%;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.content img
+{
+    position: absolute;
+    top:0;
+    left:0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.5s;
+    pointer-events: none;
+    z-index: 3;
+}
+.logo:hover .content img
+{
+    opacity: 0;
+    transition: 0.5s;
+    position: relative;
+}
+
+.content h2
+{
+
+    font-size: 1.5em;
+    display: block;
+    padding: 1px;
+    text-align: center;
+    vertical-align: middle;
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+.content span
+{
+    font-weight: 300;
+    font-size: 0.75em;
+}
+.content a
+{
+    position: relative;
+    background: white;
+    color: black;
+    padding: 10px 10px;
+    border-radius: 20px;
+    font-weight: 500;
+    font-size: 1.25em;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+}
+.button-logo
+{
+    display: block;
+    text-align: center;
+    padding: 2em;
+    border-radius: 20px;
+}
+.content a:hover
+{
+    letter-spacing: 0.2em;
+}
+
+.text-page2
+{
+    color : white;
+    text-align: center;
+    justify-content: center;
+    font-weight: 200;
+    font-size: 40px;
+
+}
+.text-logo
+{
+    z-index: 4;
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    bottom:200px;
+}
+.text-website
+{
+    color: white;
+    font-weight: 300;
+    font-size: 50px;
+    text-align: center;
+
 }
