--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -25,7 +25,20 @@ body {
     background-color: #FFFFBD;
     font-family: 'Merriweather',serif;
 }
+a:link, a:visited {
+    text-decoration: none;
+    padding-bottom: 2px;
+    color: #006600;
+    border-bottom: solid 2px #006600;
+}
 
+/* Interactive link styles */
+a:hover, a:focus, a:active {
+    text-decoration: none;
+    padding-bottom: 2px;
+    color: #f26f21;
+    border-bottom: solid 2px blue;
+}
 /* Main heading */
 h1 {   
     font-size: calc(48px + (84 - 48) * ((100vw - 320px) / (1600 - 320)));  
