--- a/exercises/assets/css/style-6.css
+++ b/exercises/assets/css/style-6.css
@@ -21,7 +21,12 @@ input, button, textarea, select { font: inherit }
 body {background-color: #c2ffc2}
 
 h1, h2, h2 { color: #008000; letter-spacing: -2px; }
-
+a:hover, a:focus, a:active {
+    text-decoration: none;
+    padding-bottom: 2px;
+    color: #f26f21;
+    border-bottom: solid 2px blue;
+}
 /* Main heading */
 h1 {
 	font-family: 'Oswald',sans-serif;
