--- a/exercises/assets/css/perso-project/styles.css
+++ b/exercises/assets/css/perso-project/styles.css
@@ -282,11 +282,14 @@ html, body
 /* ----------------------- LOGO ----------------------- */
 
 
-.logo
-{
+.logo {
     position: relative;
-    width: 400px;
-    height: 400px;
+    width: 20vw;
+    height: 20vw;
+    max-width: 400px;
+    max-height: 400px;
+    min-width: 200px;
+    min-height: 200px;
     align-items: center;
     background: rgba(0,0,0,0.5);
     border-radius: 50%;
@@ -379,26 +382,26 @@ html, body
     font-weight: 300;
     font-size: 0.75em;
 }
-.content a
-{
+.content a {
     position: relative;
     background: white;
     color: black;
-    padding: 10px 10px;
     border-radius: 20px;
     font-weight: 500;
-    font-size: 1.25em;
+    padding: 0.4vw 1vw;
+    font-size: 2vw;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     transition: 0.5s;
 }
-.button-logo
-{
+
+.button-logo {
     display: block;
     text-align: center;
-    padding: 2em;
+    padding : 1vw;
     border-radius: 20px;
 }
+
 .content a:hover
 {
     letter-spacing: 0.2em;
@@ -413,19 +416,19 @@ html, body
     font-size: 40px;
 
 }
-.text-logo
-{
+.text-logo {
     z-index: 4;
     position: relative;
     overflow: hidden;
+    font-size: 1vw;
     margin: 0 auto;
-    bottom:200px;
+    bottom: 10vw; /
 }
 .text-website
 {
     color: white;
     font-weight: 700;
-    font-size: 50px;
+    font-size: var(--font-size-sm);
     text-align: center;
 
 }
@@ -472,8 +475,6 @@ html, body
     border-bottom: 2px solid green;
 
 }
-
-
 .space a
 {
     color : white;
@@ -505,7 +506,6 @@ html, body
     justify-content: center;
     border-radius: 5px;
     backdrop-filter: blur(10px);
-
 }
 
 
@@ -598,7 +598,7 @@ html, body
 }
 .background-photo
 {
-    background-image: url("../../image/juskteez-vu-mwhklqGVzck-unsplash.jpg");
+    background-image: url("../../image/background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
